[project]
name = "slimflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax==0.4.6",
    "jaxlib==0.4.6",
    "matplotlib==3.7.0",
    "ml-collections==0.1.1",
    "ninja==1.11.1",
    "numpy==1.23.4",
    "scipy==1.10.0",
    "tensorflow-datasets==4.8.2",
    "tensorflow-estimator==2.11.0",
    "tensorflow-gan==2.1.0",
    "tensorflow-hub==0.12.0",
    "tensorflow-io-gcs-filesystem==0.30.0",
    "tensorflow-metadata==1.12.0",
    "tensorflow-probability==0.19.0",
    "tqdm==4.64.1",
    "urllib3==1.26.14",
    "torch==2.4.0+cu118",
    "torchvision==0.19.0+cu118",
    "setuptools>=76.0.0",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu118/torch",
    "https://download.pytorch.org/whl/cu118/torchvision",
]
